# sql-workshop

./: .env.dev  .env.prod  Dockerfile  database.py  pyproject.toml
